--- a/pebblemache.co.uk/index.html
+++ b/pebblemache.co.uk/index.html
@@ -17,15 +17,14 @@
 		<h2>Pictures of pebbles:</h2>
 		<img src="photostorage\pebble1.jpg" width="500" height="350">
 		<h2>Learn more about Rainbows</h2>
-		<video width="320" height="240" controls>
-            <source src="https://www.youtube.com/watch?v=dqe-AImjZrc&t" type="video/mp4" width="500" height="350">
-         </video>
-		 <p>Please visit <a href="https://rainbows.co.uk">rainbows.co.uk</a></p>
+		<p>Rainbows is a childrens hospice charity</p>
+		<p>Please watch this video: https://www.youtube.com/watch?v=dqe-AImjZrc&t to take a tour of Rainbows Hospice.</p>
+		 <p>Please visit <a href="https://rainbows.co.uk">rainbows.co.uk</a> to find out more.</p>
 		 <h2>Donate your pebbles</h2>
 		 <p>If you have spare pebbles, please donate them so we can have a wider range of products.</p>
 		 <p>You can also bring your own pebbles for us to decorate if you do not like our shapes.</p>
 		 <p>If you have a large stone, it will take longer to make.</p>
 		<h1></h1>
-		<p><small id="ahk_info"><a href="todaystime" onclick="AHK('disp_info')">powered by todaystime</a><small></p>
+		<p><small id="ahk_info"><a href="pebblemache.github.io/shop/index.html" onclick="AHK('disp_info')">powered by todaystime</a><small></p>
 	</body>
 </html>
