--- a/pebblemache.co.uk/index.html
+++ b/pebblemache.co.uk/index.html
@@ -25,6 +25,6 @@
 		 <p>You can also bring your own pebbles for us to decorate if you do not like our shapes.</p>
 		 <p>If you have a large stone, it will take longer to make.</p>
 		<h1></h1>
-		<p><small id="ahk_info"><a href="pebblemache.github.io/shop/index.html" onclick="AHK('disp_info')">powered by todaystime</a><small></p>
+		<p><small id="ahk_info"><a href="https://pebblemache.github.io/shop/index.html" onclick="AHK('disp_info')">powered by todaystime</a><small></p>
 	</body>
 </html>
