--- a/pebblemache.co.uk/index.html
+++ b/pebblemache.co.uk/index.html
@@ -18,7 +18,7 @@
 		<img src="photostorage\pebble1.jpg" width="500" height="350">
 		<h2>Learn more about Rainbows</h2>
 		<p>Rainbows is a childrens hospice charity</p>
-		<p>Please watch this video: https://www.youtube.com/watch?v=dqe-AImjZrc&t to take a tour of Rainbows Hospice.</p>
+		<p>Please click <a href="https://www.youtube.com/watch?v=dqe-AImjZrc&t">this blue text</a> to take a tour of Rainbows Hospice on a video..</p>
 		 <p>Please visit <a href="https://rainbows.co.uk">rainbows.co.uk</a> to find out more.</p>
 		 <h2>Donate your pebbles</h2>
 		 <p>If you have spare pebbles, please donate them so we can have a wider range of products.</p>
