--- a/localhost-redirect/index.html
+++ b/localhost-redirect/index.html
@@ -1,8 +1,9 @@
 <head>
-<meta http-equiv="refresh" content="0; url=http://locahost" />
+  <link href="style.css" rel="stylesheet">
+  <meta http-equiv="refresh" content="0; url=http://locahost" />
 </head>
 
 <body>
-<h1>Redirecting...</h1>
-<p>If you are not redirected in 15 seconds, please click <a href="http://localhost">here</a>.</p>
+  <h1>Redirecting...</h1>
+  <p>If you are not redirected in 15 seconds, please click <a href="http://localhost">here</a>.</p>
 </body>
