--- a/localhost-redirect/index.html
+++ b/localhost-redirect/index.html
@@ -1,5 +1,5 @@
 <head>
-  <link href="styles.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <meta http-equiv="refresh" content="0; url=http://locahost" />
 </head>
 
