--- a/localhost-redirect/index.html
+++ b/localhost-redirect/index.html
@@ -1,6 +1,6 @@
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <meta http-equiv="refresh" content="0; url=http://locahost" />
+  <meta http-equiv="refresh" content="0; url=http://localhost" />
 </head>
 
 <body>
