--- a/localhost-redirect/index.html
+++ b/localhost-redirect/index.html
@@ -703,5 +703,5 @@
   <h1>Redirecting...</h1>
   <p>If you are not redirected in 15 seconds, please click <a href="http://localhost">here</a>.</p>
   
-  <p>Powered by <a href="pebblemache.github.io/shop/todaystime">todaystime</a></p>
+  <p>Powered by <a href="https://pebblemache.github.io/shop/todaystime">todaystime</a></p>
 </body>
